...
import '../Utilities/AddSub.dart';
import 'package:sdp_wits_services/globals.dart' as globals;
import 'package:provider/provider.dart';
import 'package:sdp_wits_services/StudentsApp/Providers/Subscriptions.dart';

class Protection extends StatefulWidget {
  const Protection({super.key});

  @override
  State<Protection> createState() => _Protection();
}

class _Protection extends State<Protection> {
...

  Widget fabChild = Row(
    children: const <Widget>[
      Spacer(),
      Icon(Icons.book),
      Spacer(),
      Text('Book Ride'),
      Spacer()
    ],
  );

  bool isCancelingRide = false;

...
    if (bookedController.booked.isTrue) {
      setState(() => fabChild = Row(
            children: const <Widget>[
              Spacer(),
              Icon(Icons.clear),
              Spacer(),
              Text('Cancel Ride'),
              Spacer()
            ],
          ));
    }

    if (subs.contains(service)) {
...
                                color: Colors.black54),
                          ),
                          const SizedBox(
                            height: 10.0,
                          ),
                          Text(
                            'From: ${ride.from}',
                            style: const TextStyle(
                                fontWeight: FontWeight.w600,
                                color: Colors.black54),
                          ),
                          const SizedBox(
                            height: 10.0,
                          ),
                          Text(
                            'To: ${ride.to}',
                            style: const TextStyle(
                                fontWeight: FontWeight.w600,
                                color: Colors.black54),
                          ),
                          const SizedBox(
                            height: 10.0,
...
                                                    style: TextStyle(
                                                        color: Colors.red))),
                                        TextButton(
                                            onPressed: () {
                                              Get.back();
                                            },
                                            child: const Text("Go Back")),
                                      ],
                                    ),
                                  )),
                        ),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(35.0),
...
