...
                    const Text("Are you sure you want to Sign Out?",
                      style: TextStyle(fontWeight: FontWeight.bold, fontSize: 20)
                    ),
                    TextButton(onPressed: (){
                      logOut();
                    },
                        child: const Text("Sign Out", style: TextStyle(color: Colors.red))
                    ),
                    TextButton(onPressed: (){
                      Navigator.pop(context);
                    },
                        child: const Text("Cancel")
                    ),
                  ],
                ),
              )
          );
        },
...
