...
                      Container(
                        margin: const EdgeInsets.fromLTRB(0, 0, 0, 25),
                        child: Row(
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
                          children: [
                            const Text(
                              'New Session',
                              style: TextStyle(
                                  fontWeight: FontWeight.bold, fontSize: 18),
                            ),
                            ElevatedButton(
                              style: ElevatedButton.styleFrom(
                                  primary: const Color(0xff003b5c)),
...
                                    theCounsellor,
                                    description,
                                    meetingLocation,
                                    setState);
                                Get.back();
                              },
                              child: const Text('Submit'),
                            )
                          ],
                        ),
                      ),
                      Row(
                        children: const [
...
